# multithreading

./: README.md
multiplayer_game/: CMakeLists.txt  ProblemStatement.txt  README.txt  run_multiprocess.sh  run_multithreaded.sh
multiplayer_game/include/: CommonTypes.h  Exceptions.h  IMsgDispatcher.h  IMsgQueue.h  IPCHelper.h  IPlayer.h  ListMsgQueue.h  Message.h  MsgDispatcher.h  PipeMsgQueue.h  Player.h  PlayerManager.h  ThreadWrapper.h
multiplayer_game/src/: IPCHelper.cpp  ListMsgQueue.cpp  MsgDispatcher.cpp  PipeMsgQueue.cpp  Player.cpp  PlayerManager.cpp  multiprocess.cpp  multithreaded.cpp
