cmake_minimum_required(VERSION 3.10)
project(game LANGUAGES CXX)
message("Supported features = ${CMAKE_CXX_COMPILE_FEATURES}")
SET(CMAKE_CXX_FLAGS "-std=c++11 -g")
set(INCLUDE_DIR include)
set(COMMON_SRC src/ListMsgQueue.cpp src/PipeMsgQueue.cpp src/Player.cpp src/PlayerManager.cpp src/MsgDispatcher.cpp src/IPCHelper.cpp)
include_directories(${INCLUDE_DIR})
add_executable(multithreaded_game  ${COMMON_SRC} src/multithreaded.cpp)
add_executable(multiprocess_game  ${COMMON_SRC} src/multiprocess.cpp)
set_target_properties(multiprocess_game PROPERTIES COMPILE_FLAGS "-DMULTIPROCESS")